@@ -1,6 +1,7 @@
 {
 	"k1": "v1",
 	"k2": {
+		"": "special_case",
 		"a1": "x1",
 		"a2": "x2",
 		"a3": "x3"
@@ -32,6 +33,7 @@
 	},
 	"k8": {
 		"k1": {
+			"": "special_case2",
 			"k2": "z2"
 		}
 	}
